# UniPaith_MVP

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  LANDING_PAGE_COPY.md  Makefile  WINDOWS_SETUP.md  export_feedback.py  feedback_export.py  finalize-gui-sync-mac.sh  finalize-gui-sync.ps1  finalize-session-sync.sh  install-gui-autosync.ps1  sync-claude-gui-to-gdrive.ps1  unipaith_feedback.xlsx
unipaith-backend/: .env.dev  .env.example  .env.prod  .env.production  .env.staging  .envcd  .gitignore  AI_SELF_DRIVING_RUNBOOK.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  verify.html
unipaith-backend/alembic/: env.py
unipaith-backend/data/: real_universities.json  university_seeds.json
unipaith-backend/docs/: DATA_SEEDING.md
unipaith-backend/infra/terraform/: main.tf  (+3 more)
unipaith-backend/scripts/: audit_fleet_conformance.py  bootstrap_ai_engine.py  build_michigan_catalogue_descriptions.py  build_purdue_field_descriptions.py  build_stanford_catalog_descriptions.py  build_stanford_catalogue_descriptions.py  build_ucla_catalogue_descriptions.py  build_usc_supplemental_descriptions.py  build_ut_austin_supplemental_descriptions.py  build_uw_catalogue_descriptions.py  enrich_database.py  enrich_mit.py  fleet_audit.py  generate_bu_field_descriptions.py  generate_caltech_reviews_depth.py  generate_columbia_field_descriptions.py  generate_columbia_reviews_depth.py  generate_duke_reviews_depth.py  generate_georgia_tech_reviews_depth.py  generate_harvard_reviews_depth.py  generate_ipeds_catalog.py  generate_jhu_reviews_depth.py  generate_michigan_repair.py  generate_northwestern_reviews_depth.py  generate_nyu_cip_who.py  generate_nyu_repair.py  generate_penn_reviews_depth.py  generate_purdue_field_descriptions.py  generate_purdue_reviews_depth.py  generate_rice_reviews_depth.py  generate_stanford_field_descriptions.py  generate_stanford_reviews_depth.py  generate_ucla_repair.py  generate_ucsd_credential_descriptions.py  generate_ucsd_reviews_depth.py  generate_uf_catalog.py  generate_uiuc_repair.py  generate_usc_cip_who.py  generate_usc_repair.py  generate_ut_austin_repair.py  (+34 more)
unipaith-backend/tests/: _uni_helpers.py  conftest.py  test_ab_testing.py  test_ai_artifacts.py  test_ai_artifacts_a32.py  test_ai_client.py  test_ai_coach.py  test_ai_coach_c2.py  test_ai_cost_cap.py  test_ai_evals_a3.py  test_ai_evals_a32.py  test_ai_evals_c1.py  test_ai_evals_harness.py  test_ai_extractor.py  test_ai_feature_emitter.py  test_ai_feedback_service.py  test_ai_orchestrator.py  test_ai_rationale.py  test_ai_state.py  test_ai_state_a3.py  test_ai_state_a32.py  test_ai_streaming_a32.py  test_ai_structure_cohort.py  test_ai_structure_simulation.py  test_ai_validator.py  test_ai_validator_a3.py  test_ai_validator_a32.py  test_airtable_sync.py  test_ambassador_match.py  test_anti_stub_gate.py  test_applications.py  test_asymmetric_rationale_endpoints.py  test_attribution_funnel.py  test_auth.py  test_berkeley_grad_tuition.py  test_berkeley_profile_standard.py  test_billing.py  test_boston_college_profile.py  test_breaker.py  test_brown_profile.py  (+271 more)
(+2652 files in other folders)
