[project]
name = "unipaith-backend"
version = "0.1.0"
description = "UniPaith AI Admissions Platform - Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pgvector>=0.3.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "boto3>=1.34.0",
    "python-multipart>=0.0.9",
    "openai>=1.30.0",
    "numpy>=1.26.0",
    "jinja2>=3.1.0",
    "python-dateutil>=2.9.0",
    "icalendar>=5.0.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "optuna>=4.0.0",
    "shap>=0.45.0",
    "scipy>=1.13.0",
    "imbalanced-learn>=0.12.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "thefuzz>=0.22.0",
    "python-Levenshtein>=0.25.0",
    "aiohttp>=3.9.0",
    "slowapi>=0.1.8",
    "apscheduler>=3.10.0",
    "playwright>=1.40.0",
    "python-json-logger>=3.0.0",
    "youtube-transcript-api>=0.6.0",
    "feedparser>=6.0.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "gpu: tests requiring GPU infrastructure (deselected by default, run with pytest -m gpu)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
